// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App:  matches snapshot when is on landing page 1`] = `
<Fragment>
  <main>
    <ComponentStub />
  </main>
</Fragment>
`;

exports[`App:  matches snapshot when is on the App 1`] = `
<Fragment>
  <Main>
    <ComponentStub />
    <TabBar />
  </Main>
</Fragment>
`;
